--- a/package.json
+++ b/package.json
@@ -56,6 +56,7 @@
     "js-yaml": "3.4.5",
     "json-stable-stringify": "^1.0.0",
     "lodash.clonedeep": "^3.0.1",
+    "lodash.isequal": "^3.0.4",
     "lodash.merge": "^3.3.2",
     "lodash.omit": "^3.1.0",
     "minimatch": "^3.0.0",
